[package]
name = "xsmpy"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xsmpy"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.72"
bytes = "1.4.0"
pyo3 = { version = "0.19.2", features = ["anyhow"] }
pyo3-asyncio = { version = "0.19.0", features = ["tokio", "tokio-runtime"] }
tokio = { version = "1.29.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time"
] }
rs_xsm = { version = "0.1.1", package = "xsm" }
# rs_xsm = { path = "../xsm", version = "0.1.1", package = "xsm" }
