[package]
description = 'redis stream for python'
edition = '2021'
homepage = 'https://github.com/xxai-art/xsm'
name = 'xsmpy'
version = '0.3.3'

[dependencies]
anyhow = '1.0.72'
bytes = '1.4.0'

[dependencies.pyo3]
features = ['anyhow']
version = '0.19.2'

[dependencies.pyo3-asyncio]
features = ['tokio', 'tokio-runtime']
version = '0.19.0'

[dependencies.rs_xsm]
package = 'xsm'
version = '0.1.2'

[dependencies.tokio]
features = ['macros', 'rt', 'rt-multi-thread', 'time']
version = '1.29.1'

[lib]
crate-type = ['cdylib']
name = 'xsmpy'
