[package]
name = "xstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bytes = "1.4.0"
fred = "6.3.0"
gethostname = "0.4.3"
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
xxai-msgpacker = "0.4.4"
