[package]
name = "xstream_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xstream_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.2"
pyo3-asyncio = { version = "0.19.0", features = ["tokio", "tokio-runtime"] }
tokio = { version = "1.29.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time"
] }
xstream = { path = "../xstream" }
